✨ Update login flow so it directs to sign in / sign up on user existence
